--- a/app.css
+++ b/app.css
@@ -35,19 +35,30 @@ svg {
 
 #mainNavbar .navbar-brand {
     color: #ea1c2c;
+    margin-left: 20px;
+    --d: 20px;    /* the cube depth */
+    
+    transform: translate(calc(var(--d)/-1),var(--d));
+    transition: 0.5s;
 }
 
 #mainNavbar .nav-link{
     color: white;
+    --d: 20px;    /* the cube depth */
+    
+    transform: translate(calc(var(--d)/-1),var(--d));
+    transition: 0.5s;
 }
 
 #mainNavbar .nav-link:hover{
     color: #ea1c2c;
     cursor: pointer;
+    transform: translate(0,0);
 }
 
 #mainNavbar .navbar-brand:hover {
     cursor: pointer;
+    transform: translate(0,0);
 }
 
 #headingGroup span {
@@ -62,6 +73,10 @@ svg {
 .navbar.scrolled {
     background: rgb(222,192,222);
     transition: background 500ms;
+}
+
+.social {
+    width: 500px;
 }
 
 @media (max-width: 1200px) {
